--- a/index.html
+++ b/index.html
@@ -2,18 +2,98 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Hasan's Art</title>
+  <title>Slideshow Example</title>
   <style>
-    body { font-family: sans-serif; background: #111; color: #eee; text-align: center; }
-    img { max-width: 90%; height: auto; margin: 20px auto; display: block; border: 2px solid #444; }
-    h1 { margin-top: 40px; }
+    body {
+      background: #111;
+      color: white;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px;
+    }
+    .slideshow-container {
+      position: relative;
+      max-width: 600px;
+      width: 100%;
+    }
+
+    .slide {
+      display: none;
+    }
+
+    .slide img {
+      width: 100%;
+      height: auto;
+      border: 3px solid #333;
+      border-radius: 10px;
+    }
+
+    .arrow {
+      cursor: pointer;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      color: white;
+      font-size: 36px;
+      font-weight: bold;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 10px;
+      user-select: none;
+      border-radius: 4px;
+    }
+
+    .prev {
+      left: 0;
+    }
+
+    .next {
+      right: 0;
+    }
   </style>
 </head>
 <body>
-  <h1>Hasan's Art Gallery</h1>
-  <p>These are my artworks. Click to view full size.</p>
 
-  <a href="img/art1.jpg" target="_blank"><img src="img/art1.jpg" alt="Art 1"></a>
-  <a href="img/art2.jpg" target="_blank"><img src="img/art2.jpg" alt="Art 2"></a>
+  <h1>Project: Character Design</h1>
+
+  <div class="slideshow-container">
+    <div class="slide">
+      <img src="img/art1.jpg" alt="Art 1">
+    </div>
+    <div class="slide">
+      <img src="img/art2.jpg" alt="Art 2">
+    </div>
+    <div class="slide">
+      <img src="img/art3.jpg" alt="Art 3">
+    </div>
+
+    <span class="arrow prev" onclick="changeSlide(-1)">❮</span>
+    <span class="arrow next" onclick="changeSlide(1)">❯</span>
+  </div>
+
+  <script>
+    let slideIndex = 0;
+    const slides = document.getElementsByClassName("slide");
+
+    function showSlide(index) {
+      if (index >= slides.length) slideIndex = 0;
+      if (index < 0) slideIndex = slides.length - 1;
+
+      for (let i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slides[slideIndex].style.display = "block";
+    }
+
+    function changeSlide(n) {
+      slideIndex += n;
+      showSlide(slideIndex);
+    }
+
+    // show the first slide initially
+    showSlide(slideIndex);
+  </script>
+
 </body>
 </html>
