--- a/index.html
+++ b/index.html
@@ -1,99 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Slideshow Example</title>
-  <style>
-    body {
-      background: #111;
-      color: white;
-      font-family: sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px;
-    }
-    .slideshow-container {
-      position: relative;
-      max-width: 600px;
-      width: 100%;
-    }
-
-    .slide {
-      display: none;
-    }
-
-    .slide img {
-      width: 100%;
-      height: auto;
-      border: 3px solid #333;
-      border-radius: 10px;
-    }
-
-    .arrow {
-      cursor: pointer;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      color: white;
-      font-size: 36px;
-      font-weight: bold;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px;
-      user-select: none;
-      border-radius: 4px;
-    }
-
-    .prev {
-      left: 0;
-    }
-
-    .next {
-      right: 0;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>My Art Projects</title>
+<style>
+  body {
+    background: #111;
+    color: white;
+    font-family: sans-serif;
+    padding: 40px;
+    max-width: 900px;
+    margin: auto;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+  }
+  .project {
+    background: #222;
+    border-radius: 12px;
+    padding: 15px;
+    width: 280px;
+    box-sizing: border-box;
+  }
+  .project h2 {
+    margin: 0 0 12px 0;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+  .single-image img {
+    width: 100%;
+    border-radius: 10px;
+    border: 2px solid #444;
+    display: block;
+  }
+  .slideshow-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    border: 2px solid #444;
+  }
+  .slides {
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+  }
+  .slides img {
+    width: 100%;
+    flex-shrink: 0;
+    user-select: none;
+    pointer-events: none;
+  }
+  .arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.6);
+    color: white;
+    font-size: 24px;
+    padding: 8px 14px;
+    cursor: pointer;
+    border-radius: 50%;
+    user-select: none;
+  }
+  .arrow.left {
+    left: 8px;
+  }
+  .arrow.right {
+    right: 8px;
+  }
+</style>
 </head>
 <body>
 
-  <h1>Project: Character Design</h1>
+<h1>My Art Projects</h1>
 
-  <div class="slideshow-container">
-    <div class="slide">
-      <img src="img/art1.jpg" alt="Art 1">
-    </div>
-    <div class="slide">
-      <img src="img/art2.jpg" alt="Art 2">
-    </div>
-    <div class="slide">
-      <img src="img/art3.jpg" alt="Art 3">
-    </div>
+<div class="projects">
 
-    <span class="arrow prev" onclick="changeSlide(-1)">❮</span>
-    <span class="arrow next" onclick="changeSlide(1)">❯</span>
+  <!-- Project 1: single image -->
+  <div class="project">
+    <h2>Project One</h2>
+    <div class="single-image">
+      <img src="img/project1.jpg" alt="Project One" />
+    </div>
   </div>
 
-  <script>
-    let slideIndex = 0;
-    const slides = document.getElementsByClassName("slide");
+  <!-- Project 2: slideshow -->
+  <div class="project">
+    <h2>Project Two</h2>
+    <div class="slideshow-container" data-slideshow-id="2">
+      <div class="slides">
+        <img src="img/project2-1.jpg" alt="Project Two Image 1" />
+        <img src="img/project2-2.jpg" alt="Project Two Image 2" />
+        <img src="img/project2-3.jpg" alt="Project Two Image 3" />
+      </div>
+      <div class="arrow left" onclick="changeSlide('2', -1)">❮</div>
+      <div class="arrow right" onclick="changeSlide('2', 1)">❯</div>
+    </div>
+  </div>
 
-    function showSlide(index) {
-      if (index >= slides.length) slideIndex = 0;
-      if (index < 0) slideIndex = slides.length - 1;
+  <!-- Project 3: slideshow -->
+  <div class="project">
+    <h2>Project Three</h2>
+    <div class="slideshow-container" data-slideshow-id="3">
+      <div class="slides">
+        <img src="img/project3-1.jpg" alt="Project Three Image 1" />
+        <img src="img/project3-2.jpg" alt="Project Three Image 2" />
+      </div>
+      <div class="arrow left" onclick="changeSlide('3', -1)">❮</div>
+      <div class="arrow right" onclick="changeSlide('3', 1)">❯</div>
+    </div>
+  </div>
 
-      for (let i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slides[slideIndex].style.display = "block";
+</div>
+
+<script>
+  const slideIndices = {};
+
+  function changeSlide(slideshowId, direction) {
+    if (!(slideshowId in slideIndices)) {
+      slideIndices[slideshowId] = 0;
     }
+    const container = document.querySelector(`.slideshow-container[data-slideshow-id="${slideshowId}"]`);
+    const slides = container.querySelector('.slides');
+    const imagesCount = slides.children.length;
 
-    function changeSlide(n) {
-      slideIndex += n;
-      showSlide(slideIndex);
-    }
+    slideIndices[slideshowId] += direction;
 
-    // show the first slide initially
-    showSlide(slideIndex);
-  </script>
-
-</body>
-</html>
+    if (slideIndices[slideshowId] >= imagesCount) slideIndices[slideshow]()
