--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>My Art Projects</title>
+<title>Hasan's Art Projects</title>
 <style>
   body {
     background: #111;
