--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="project">
     <h2>Project One</h2>
     <div class="single-image">
-      <img src="img/s6efzsizpf4e1.jpeg" alt="Submerged Classroom" />
+      <img src="s6efzsizpf4e1.jpeg" alt="Submerged Classroom" />
     </div>
   </div>
 
