--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
   <div class="gallery">
 
     <!-- Single image: clicking opens full image -->
-    <a href="img/project1.jpg" target="_blank" title="Project 1">
-      <img src="img/project1.jpg" alt="Project 1" />
+    <a href="img/s6efzsizpf4e1.jpeg" target="_blank" title="Project 1">
+      <img src="img/s6efzsizpf4e1.jpeg" alt="Submerged Classroom" />
     </a>
 
     <!-- Project with multiple images slideshow -->
