--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
   <div class="project">
     <h2>Project One</h2>
     <div class="single-image">
-      <a href="img/project1.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="img/project1.jpg" alt="Project One" />
+      <a href="img/s6efzsizpf4e1.jpeg" target="_blank" rel="noopener noreferrer">
+        <img src="img/s6efzsizpf4e1.jpeg" alt="Submerged Classroom" />
       </a>
     </div>
   </div>
